K8s/traefik.yaml
---
# Strip prefix for FastAPI
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-backend-api-prod
spec:
  stripPrefix:
    prefixes:
      - /api/v1
---
# Strip prefix for FastAPI
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-backend-api-dev
spec:
  stripPrefix:
    prefixes:
      - /api/dev

---
