K8s/services.yaml
# Expose FastAPI backend through a ClusterIP service on port 30000
apiVersion: v1
kind: Service
metadata:
  name: backend-api
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 80

    - protocol: TCP
      name: websecure
      port: 443
      targetPort: 443
  selector:
    app: traefik
  type: LoadBalancer
  loadBalancerIP: "35.228.188.69"
  loadBalancerSourceRanges:
  - 0.0.0.0/0

---
